| Bug #16853 | Events: mysqldump doesn't show events | ||
|---|---|---|---|
| Submitted: | 27 Jan 2006 20:59 | Modified: | 15 Mar 2006 15:37 |
| Reporter: | Peter Gulutzan | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.1.6-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Chad MILLER | Target Version: | |
[27 Jan 2006 20:59]
Peter Gulutzan
[1 Mar 2006 20:15]
Sergei Golubchik
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/3211
[15 Mar 2006 15:37]
Paul DuBois
Noted in 5.1.8 changelog. Added the <option>--events</option> option to <command>mysqldump</command> to enable events to be included in the dump output. (Bug #16853)
