Added code to mysqldump to dump timed events when instructed to do so, with the '-E' or '--events' flag.  (Closes Bug#16853 and Bug#17714.)

WARNING:

At present, these tests fail due to b*g number 18078.